--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css" />
-    <title></title>
+    <title>Rose Prévost - fleuriste Boulogne sur mer</title>
   </head>
   <body class="no-margin">
     <nav>
@@ -19,14 +19,14 @@
     <section id="home">
       <div id="home_article">
         <h1 class="text_style_1">Rose Prevost, la fleuriste Boulonnaise</h1>
-        <p class="text_style_1">Une livraison de fleurs n’est jamais denuee de sens: message
-          d’amour ou d’amitie, elle est, avant tout, dictee par une
+        <p class="text_style_1">Une livraison de fleurs n’est jamais denuee de sens:
+          message d’amour ou d’amitie, elle est, avant tout, dictee par une
           grande palette de sentiments et repose en grande partie sur le
           professionnalisme de l’artisan fleuriste.
           <br/>
           Etre fleuriste, c’est servir toutes les occasions de la vie par
           le biais de produits d’autant plus precieux qu’ils sont ephemeres.
-          Quel plus beau messager qu’une fleur pour transmettre les émotions?
+          Quel plus beau messager qu’une fleur pour transmettre les emotions?
           <br/><br/>
           Rose Prevost, fleuriste boulonnaise a la fois artiste et gestionnaire,
           vous propose son savoir-faire en toute saison et en toutes
@@ -74,12 +74,18 @@
     <section id="store">
       <div id="store_frame">
         <h2 class="text_style_1">Notre boutique...</h2>
-        <p class="text_style_1">lorem ipsum</p>
+        <p class="text_style_1">Nos fleures sont cultivees sur un terrain
+          tout proche de notre boutique, a La Capelle, pour vous garantir
+          des produits de meilleure qualitee. <br/><br/>
+          Retouvez-nous dans notre boutique a Boulogne-sur-mer, et suivez
+          notre actualitee sur les reseaux sociaux:</br></br></p>
         <div id="icons">
           <a href="https://www.instagram.com/?hl=fr" target="_blank"><div id="instagram_icon"></div></a>
           <a href="https://twitter.com/" target="_blank"><div id="twitter_icon"></div></a>
           <a href="https://fr-fr.facebook.com/" target="_blank"><div id="facebook_icon"></div></a>
         </div>
+        <p class="text_style_1"></br>Ou contactez-nous directement a l'adresse
+          suivante:</p>
         <a href="mailto:rose-prevost@fleuriste-boulogne.fr" class="links">
           rose-prevost@fleuriste-boulogne.fr
         </a>
@@ -103,6 +109,7 @@
 
     <footer>
       <p class="text_style_1-no_font no-margin">Copyright ©2017 GARENAUX Romain</p>
+      <a href="page/mentions-legales.html" class="text_style_1-no_font no-margin no-text-decoration">Mentions legales</a>
     </footer>
   </body>
 </html>
